# wasm-coredump

./: Cargo.toml  README.md  package.json  wrangler.toml
example/: Cargo.toml  README.md  package.json  wrangler.toml
example/src/: entry.mjs  lib.rs
src/: lib.rs  sentry.rs
wasm-coredump-js/: index.mjs  package.json
