[package]
name = "coredump-service"
version = "0.1.0"
edition = "2021"
authors = ["Sven Sauleau <sven@cloudflare.com>"]
license = "Apache-2.0"
description = "Wasm Coredump Service"
publish = false

# https://github.com/rustwasm/wasm-pack/issues/1247
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = "0.0.17"
coredump-to-stack = { version = "0.1.22" }
wasm-parser = { version = "0.1.21" }
core-wasm-ast = { version = "0.1.21" }
serde_json = "1.0.103"
serde-wasm-bindgen = "0.5.0"
serde = "1.0.173"
console_error_panic_hook = "0.1.7"
uuid = { version = "1.4.1", features = ["v4"] }
getrandom = { version = "0.2", features = ["js"] }

[profile.release]
lto = true
strip = true
codegen-units = 1
