[package]
name = "test-coredump-worker"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
serde = "1.0.171"
worker = "0.0.17"

[profile.dev]
opt-level = "s"
strip = false
debug = true

[package.metadata.wasm-pack.profile.dev.wasm-bindgen]
# emit the DWARF debug info custom sections
dwarf-debug-info = true

[package.metadata.wasm-pack.dev.release]
wasm-opt = ["-Os", "--debuginfo"]
